Fixed right sidebar popout on mobile devices
fixed popout menu on the right side of page for mobile devices

--- a/style.css
+++ b/style.css
@@ -810,8 +810,8 @@ body {
 }
 .right-side-button:before {
   content: "";
-  width: 10px;
-  height: 10px;
+  width: 0px;
+  height: 0px;
   border-radius: 50%;
   position: absolute;
   background-color: #1b86f8;
